src/templating/snapshots/yolk__templating__parser__test__error_empty_tag.snap
---
source: src/templating/parser.rs
expression: "render_error(parse_document(\"{%%}\").unwrap_err())"
snapshot_kind: text
---
  × Failed to parse yolk template file

Error: 
  × Failed to parse tag
   ╭─[file:1:1]
 1 │ {%%}
   · ─┬
   ·  ╰── tag
   ╰────
